Add logging system with 3 verbosity levels (default/verbose/debug)
- Add logging_config.py with configurable logging setup
- Add --verbose and --debug CLI options
- Convert debug prints to logger.debug() across all modules
- Convert setup/config prints to logger.info()
- Convert warnings to logger.warning()
- Keep essential progress and results as print() (always visible)
- Remove commented-out debug code

Modules updated: cli.py, optimization.py, io_utils.py,
solver/solver.py, solver/forward.py, solver/adjoint.py, solver/gradient.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,6 @@ zip-safe = false
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[project.scripts]
+pyheatcontrol = "pyheatcontrol.cli:main"
