feat: add 4-Neumann validation + improve docs and logging
- Add validation to prevent ill-posed 4-Neumann boundary problems
- Rewrite README with complete setup/usage guide
- Update requirements.txt with conda install instructions
- Improve logging throughout solver and optimization loop
- Apply consistent code formatting with ruff
- Refactor forward/gradient modules for clarity

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-numpy
-mpi4py
-petsc4py
-ruff
+## Requirements
+
+Recommended installation via conda:
+
+conda create -n fenicsx -c conda-forge python=3.11 fenics-dolfinx mpi4py petsc4py
+conda activate fenicsx
+
+Then install this package:
+
+pip install -e .
